--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.3.6",
     "html5-qrcode": "^2.3.8",
     "next": "16.1.1",
+    "next-pwa": "^5.6.0",
     "notistack": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
